# coveralls-python-action

./: CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  action.yml  entrypoint.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: push.yml
src/: entrypoint.py
tests/: test_entrypoint.py
